# graphite-sink-connector

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  Connector.toml  Justfile  README.md  docker-compose.yml  sample-config.yaml
.github/workflows/: ci.yml  publish.yml  publish_dev.yml  test-e2e.yml
docs/demo/: README.md
src/: amqp.rs  config.rs  graphite.rs  main.rs
tests/: e2e-reports-via-connector.bats  e2e-reports-via-connector.yaml
tests/conf/: storage-schemas.conf
