[package]
name = "graphite-sink"
version = "0.2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"]}

futures = { version = "0.3", default-features = false }

# Fluvio Dependencies
fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.11.10" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.11.9", features = ["derive"]}
